# multilayer-perceptron

./: .gitignore  Makefile  README.md  TODO.md  mlp.py  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: explore_data_wdbc.ipynb
saved_models/: model_20250502_210945.json
saved_models/defined/: basic_model.json  model.json
scripts/: activate.sh
src/multilayer_perceptron/: config.py  model.py  predict.py  split.py  train.py
src/multilayer_perceptron/metrics/: __init__.py  accuracy.py  base.py  loss.py
src/multilayer_perceptron/utils/: preprocess.py  register.py
