[tool.poetry]
name = "multilayer_perceptron"
version = "0.1.0"
description = ""
authors = ["Lea Yeh <lea.yeh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
seaborn = "*"
torch = "*"
datasets = "*"
plotly = "*"
tqdm = "*"
ipywidgets = "*"
notebook = "*"
jupyterlab = "*"
typer = "0.9.0"
click = ">=8.0,<8.2"
litetorch = { git = "https://github.com/42-CC-RNCP/litetorch.git", branch = "main" }
sklite = { git = "https://github.com/42-CC-RNCP/sklite.git", branch = "main" }
tensorboard = "^2.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mlp = "mlp:main"
